k8s/base/svc-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: rag-llm-langchain
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
