k8s/base/svc-rag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-service
  namespace: rag-llm-langchain
  labels:
    app: rag-service
spec:
  selector:
    app: rag-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
