k8s/base/svc-serving-embedding.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-embedding
  namespace: rag-llm-langchain
  labels:
    app: serving-embedding
spec:
  selector:
    app: serving-embedding
  ports:
    - name: http
      port: 8001
      targetPort: http
      protocol: TCP
  type: ClusterIP
