k8s/base/svc-serving-llm.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-llm
  namespace: rag-llm-langchain
  labels:
    app: serving-llm
spec:
  selector:
    app: serving-llm
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  type: ClusterIP
